--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -13,10 +13,11 @@ on:
   push:
     branches: 
       - master
-  schedule:
-    - cron: 0 0 1 * *
-  watch:
-    types: started
+  #schedule:
+   # - cron: 0 0 1 * *
+ # watch:
+    #types: started
+  workflow_dispatch:
 
 jobs:
   build:
